--- a/frontend/package.json
+++ b/frontend/package.json
@@ -106,5 +106,11 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^16.4.17",
+    "@types/react-dom": "^16.0.9",
+    "awesome-typescript-loader": "^5.2.1",
+    "typescript": "^3.1.3"
   }
 }
