--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,6 +11,11 @@
     "jsx": "react",
     "typeRoots": [
       "./node_modules/@types/",
+    ],
+    "lib": [
+      "dom",
+      "es2015",
+      "es2015.promise"
     ]
   },
   "include": [
