--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -10,7 +10,7 @@
     "allowJs": true,
     "jsx": "react",
     "typeRoots": [
-      "./node_modules/@types/",
+      "./node_modules/@types/"
     ],
     "lib": [
       "dom",
