--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
+    "js-cookie": "^2.2.0",
     "mini-css-extract-plugin": "0.4.3",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
@@ -111,6 +112,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.0",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "@types/react-router-dom": "^4.3.1",
