--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "jest-resolve": "23.6.0",
     "js-cookie": "^2.2.0",
     "mini-css-extract-plugin": "0.4.3",
+    "moment": "^2.22.2",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -115,8 +116,11 @@
     "@types/js-cookie": "^2.2.0",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "@types/react-infinite-scroller": "^1.0.8",
     "@types/react-router-dom": "^4.3.1",
     "awesome-typescript-loader": "^5.2.1",
+    "react-infinite-scroller": "^1.2.2",
+    "react-moment": "^0.8.2",
     "ts-loader": "^5.2.2",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
