Refactoring CRUD application

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,7 +46,10 @@
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.0.5",
     "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^4.0.1",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
@@ -117,7 +120,9 @@
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "@types/react-infinite-scroller": "^1.0.8",
+    "@types/react-router": "^4.0.32",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-router-redux": "^5.0.16",
     "awesome-typescript-loader": "^5.2.1",
     "react-infinite-scroller": "^1.2.2",
     "react-moment": "^0.8.2",
