--- a/frontend/package.json
+++ b/frontend/package.json
@@ -120,6 +120,7 @@
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "@types/react-infinite-scroller": "^1.0.8",
+    "@types/react-redux": "^6.0.9",
     "@types/react-router": "^4.0.32",
     "@types/react-router-dom": "^4.3.1",
     "@types/react-router-redux": "^5.0.16",
